--- a/package.json
+++ b/package.json
@@ -9,18 +9,40 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.2.0",
+    "@ckeditor/ckeditor5-react": "^6.2.0",
+    "@project-serum/anchor": "^0.26.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.34",
+    "@solana/wallet-adapter-wallets": "^0.19.25",
+    "@solana/web3.js": "^1.88.0",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "fastest-levenshtein": "^1.0.16",
     "lucide-react": "^0.287.0",
-    "next": "13.5.4",
-    "react": "^18",
+    "next": "^14.1.4",
+    "pino-pretty": "^10.3.1",
+    "react": "^18.2.0",
     "react-dom": "^18",
+    "react-redux": "^8.1.3",
+    "react-toastify": "^9.1.3",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
     "autoprefixer": "^10",
+    "encoding": "^0.1.13",
     "postcss": "^8",
     "tailwindcss": "^3"
   }
